@@ -60,8 +60,7 @@ send_chunk (SoupMessage *from, SoupBuffer *chunk, SoupMessage *to)
 static void
 client_msg_failed (SoupMessage *msg, gpointer msg2)
 {
-	soup_message_set_status (msg2, SOUP_STATUS_IO_ERROR);
-	soup_session_cancel_message (session, msg2);
+	soup_session_cancel_message (session, msg2, SOUP_STATUS_IO_ERROR);
 }
 
 static void
